# siderite

./: .gitignore  Cargo.toml  LICENSE  README.md  server.properties
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_java_hex_digest.rs
server/: main.rs
siderite/: Cargo.toml
siderite-core/: Cargo.toml
siderite-core/benches/: write_block_info_benches.rs
siderite-core/src/: auth.rs  biome.rs  blocks.rs  client.rs  coord.rs  items.rs  lib.rs  server.rs
siderite-core/src/entities/: entity.rs  player.rs
siderite-core/src/protocol/: authenticator.rs  mod.rs  packets.rs  thread.rs
siderite-core/src/protocol/v47/: mod.rs
siderite-core/src/storage/: world.rs
siderite-core/src/storage/chunk/: chunk_map.rs  mod.rs  section.rs
siderite-mojang/: Cargo.toml
siderite-mojang/src/: lib.rs
siderite-nbt/: Cargo.toml
siderite-nbt/src/: lib.rs
siderite/src/: main.rs  properties.rs
src/: biome.rs  blocks.rs  client.rs  lib.rs  main.rs  mc_ext.rs  nbt.rs  player.rs  protocol.rs  server.rs  world.rs
src/entities/: player.rs
src/protocol/: authenticator.rs  mod.rs  packets.rs  thread.rs
src/protocol/v47/: mod.rs
src/storage/: world.rs
src/storage/chunk/: chunk_map.rs  mod.rs  section.rs
