[package]
name = "siderite"
version = "0.0.1"
authors = ["Bond-009 <bond.009@outlook.com>"]
keywords = ["siderite", "minecraft", "server"]
repository = "https://github.com/Bond-009/siderite.git"
edition = "2018"

[[bin]]
name = "siderite"
path = "server/main.rs"
doc = false
test = false
bench = false

[lib]
name = "siderite"
path = "src/lib.rs"

[dependencies]
circbuf = "0.1.4"
env_logger = "0.6.1"
hex = "0.3.2"
log = "0.4.6"
openssl = "0.10.23"
num-derive = "0.2"
num-traits = "0.2.8"
rand = "0.6"
serde_json = "1.0.39"

[dependencies.flate2]
version = "1.0"
default-features = false
features = ["zlib"]

[dependencies.uuid]
version = "0.7"
features = ["v3"]

[dependencies.mcrw]
git = "https://gitlab.com/siderite/mcrw.git"

[dependencies.mojang]
git = "https://gitlab.com/siderite/mojang-rs.git"
