[package]
name = "siderite"
version = "0.0.1"
authors = ["Bond-009 <bond.009@outlook.com>"]
keywords = ["siderite", "minecraft", "server"]
repository = "https://github.com/Bond-009/siderite.git"
edition = "2018"

[profile.release]
lto = true

[dependencies]
base64 = "^0.10"
env_logger = "^0.6"
log = "^0.4"

[dependencies.siderite-core]
path = "siderite-core"
