[package]
name = "siderite-core"
version = "0.0.1"
authors = ["Bond-009 <bond.009@outlook.com>"]
keywords = ["siderite", "minecraft", "server"]
repository = "https://github.com/Bond-009/siderite.git"
edition = "2018"

[dependencies]
bitflags = "^1.1"
circbuf = "0.1.4"
flate2 = "^1.0"
lazy_static = "^1.4"
log = "^0.4"
openssl = "^0.10"
num-derive = "^0.2"
num-traits = "^0.2"
rand = "^0.7"
serde_json = "^1.0"

[dependencies.uuid]
version = "^0.7"
default-features = false
features = ["v3"]

[dependencies.mcrw]
git = "https://gitlab.com/siderite/mcrw.git"

[dependencies.mojang]
git = "https://gitlab.com/siderite/mojang-rs.git"
