[package]
name = "siderite-core"
version = "0.0.1"
authors = ["Bond-009 <bond.009@outlook.com>"]
keywords = ["siderite", "minecraft", "server"]
repository = "https://github.com/Bond-009/siderite.git"
edition = "2021"

[dependencies]
async-trait = "^0.1"
bitflags = "^2.2"
bytebufrs = "^0.1"
crossbeam-channel = "^0.5"
log = "^0.4"
mcrw = "0.4.0"
num-derive = "^0.4"
num-traits = "^0.2"
openssl = "^0.10"
rand = "^0.8"
serde_json = "^1.0"

[dependencies.flate2]
version = "^1.0"
default-features = false
features = ["zlib-ng-compat"]

[dependencies.uuid]
version = "^1.3"
default-features = false

[dev-dependencies]
quickcheck = "^1.0"
quickcheck_macros = "^1.0"
