[package]
name = "siderite-mojang"
version = "0.0.1"
authors = ["Bond-009 <bond.009@outlook.com>"]
keywords = ["siderite", "minecraft", "server"]
repository = "https://github.com/Bond-009/siderite.git"
edition = "2024"

[dependencies]
async-trait = "^0.1"
serde_json = "^1.0"

[dependencies.uuid]
version = "^1.2"
default-features = false

[dependencies.siderite-core]
path = "../siderite-core"

[dependencies.mojang]
git = "https://gitlab.com/siderite/mojang-rs.git"
