[package]
name = "siderite"
version = "0.0.1"
authors = ["Bond-009 <bond.009@outlook.com>"]
keywords = ["siderite", "minecraft", "server"]
repository = "https://github.com/Bond-009/siderite.git"
edition = "2021"

[features]
default = ["mojang_auth"]
mojang_auth = ["siderite-mojang"]

[dependencies]
base64 = "^0.21"
crossbeam-channel = "^0.5"
env_logger = "^0.10"
log = "^0.4"

[dependencies.tokio]
version = "^1.28"
features = [ "rt-multi-thread", "macros" ]

[dependencies.siderite-core]
path = "../siderite-core"

[dependencies.siderite-mojang]
path = "../siderite-mojang"
optional = true
